# codes

./: Factorial.py  README.md  Tabela Verdade.c  addition.c  basic_operations.py  binary.c  commission.c  sphere volume.c
Bash/: size.sh
C/: 2 in one.c  Array to matrix.c  Bigger value.c  Binary search.c  Closer_to_pi.c  Estocenticadepi.c  Estocenticadepicorrigida.c  Find words.c  First and last digit.c  Floyd's Triangle.c  Fractions.c  Insertion_Sort.c  IntensiveMemoryParalel.c  LCM and GCD.c  Long_Double_Precision_Test.c  Main Diagonal.c  Make an X.c  Matrix Diagonals.c  Matrix_test.c  Numeric sequence.c  Operations with vectors.c  Palindrome.c  Party.c  Prime and amicable numbers.c  Prime numbers.c  Selection_Sort.c  Spin_matrix.c  Struct Students.c  Timer.c  True or False table.c  Truth table.c  Word between.c  addition.c  array addition.c  array intercalation.c  array multiples.c  averages.c  bases.c  basic operations (functions).c  basic operations.c  (+19 more)
C++/: biggest_array_element_template.cpp  sum.cpp  sum_using_templates.cpp  template_sumofarray.cpp
C++/CMake codes/Elevador/: CMakeLists.txt
C++/CMake codes/Elevador/src/: Elevator_main.cpp
C++/CMake codes/Funcionário/: CMakeLists.txt
C++/CMake codes/Funcionário/src/: main.cpp
C++/CMake codes/Livros/: CMakeLists.txt
C++/CMake codes/Livros/include/: livros.h
C++/CMake codes/Livros/src/: livros_main.cpp  main.cpp
C++/CMake codes/Pessoa/: CMakeLists.txt
C++/Elevador/: CMakeLists.txt  Elevador.hpp  main.cpp
C++/Funcionário/: CMakeLists.txt  Funcionario.hpp  Funcionario_main.cpp
C++/Livros/: CMakeLists.txt  livros_main.cpp
C++/Zoo/: CMakeLists.txt  zoo_main.cpp
C/paralelcodes/: IntensiveCPUParalel.c  chainedlist.c  stochastic_estimation_pi.c  stochastic_estimation_pi_corrected.c  stochastic_estimation_pi_optimal.c
Html/: test.html
Java/: Distancia_no_plano.java
JavaScript/: Hours to days  Hours to days.js  LCM and GCD.js  Sum of matrix diagonals.js  average.js  basic operations.js  body mass index.js  drawcard.js  hours to days.js  sum of main diagonal.js  two arrays in one.js
Python/: First and Last digit.py  LCM and GCD.py  basic_operations.py  factorial.py  hours to days.py
Shell/: prime.sh  size.sh
(+12 files in other folders)
